--- a/hud/views/index.ejs
+++ b/hud/views/index.ejs
@@ -9,8 +9,9 @@
         <div class="hud js-hud">
             <div class="hud__hearts js-hud-hearts"></div>
             <div class="hud__rupees js-hud-rupees"></div>
+            <div class="hud__fairies js-hud-fairies"></div>
             <div class="hud__alert js-hud-alert">
-                <div class="hud__alert__bot">KitaBot</div>
+                <div class="hud__alert__bot">Kitajchukbot</div>
                 <div class="hud__alert__msg js-hud-alert-msg"></div>
             </div>
         </div>
