--- a/hud/views/index.ejs
+++ b/hud/views/index.ejs
@@ -16,6 +16,7 @@
                 <div class="hud__alert__bot">Kitajchukbot</div>
                 <div class="hud__alert__msg js-hud-alert-msg"></div>
             </div>
+            <audio class="hud__audio js-hud-audio" src="" controls></audio>
         </div>
         <script src="/js/app.js"></script>
     </body>
