--- a/hud/views/index.ejs
+++ b/hud/views/index.ejs
@@ -13,6 +13,14 @@
             <div class="hud__sidebar js-hud-sidebar">
                 <div class="hud__heart__counter js-hud-heart-counter">00:00</div>
                 <div class="hud__fairy__counter js-hud-fairy-counter">00:00</div>
+                <div class="hud__subs">
+                    <h2 class="blue">Recent Subs</h2>
+                    <div class="js-hud-subs"></div>
+                </div>
+                <div class="hud__follows">
+                    <h2 class="blue">Recent Follows</h2>
+                    <div class="js-hud-follows"></div>
+                </div>
             </div>
             <div class="hud__alert js-hud-alert">
                 <div class="hud__alert__bot">Kitajchukbot</div>
