--- a/hud/views/index.ejs
+++ b/hud/views/index.ejs
@@ -8,7 +8,10 @@
     <body class="<%= locals.dev ? 'dev' : '' %>">
         <div class="hud js-hud">
             <div class="hud__hearts js-hud-hearts"></div>
-            <div class="hud__rupees js-hud-rupees"></div>
+            <div class="hud__rupees">
+                <!-- <div class="hud__rupees__icon js-hud-cheer-icon"></div> -->
+                <div class="hud__rupees__cheer js-hud-cheer"></div>
+            </div>
             <div class="hud__fairies js-hud-fairies"></div>
             <div class="hud__sidebar js-hud-sidebar">
                 <div class="hud__heart__counter js-hud-heart-counter">00:00</div>
