keep track of ongoing stats for users. reorg hud/source/js. test canvas effects. test audio backgrounding...

--- a/hud/source/sass/app.scss
+++ b/hud/source/sass/app.scss
@@ -28,7 +28,7 @@ body {
 }
 
 body.dev {
-    background-color: $black;
+    background-color: $black01;
 }
 
 
@@ -96,6 +96,10 @@ body.dev {
     .mono {
         font-family: monospace;
     }
+}
+.hud__content {
+    position: relative;
+    z-index: 2;
 }
 
 
@@ -262,7 +266,10 @@ body.dev {
     left: 0;
     position: fixed;
     visibility: hidden;
-    width: 100%;
+    width: 50%;
+}
+.hud__audio + .hud__audio {
+    left: 50%;
 }
 
 
@@ -287,4 +294,19 @@ body.dev {
 .hud__rupees__cheer {
     display: inline-block;
     vertical-align: middle;
+}
+
+
+
+/******************************************************************************
+ * HUD FX Canvas
+*******************************************************************************/
+.hud__canvas {
+    height: 100%;
+    left: 0;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
