--- a/hud/views/index.ejs
+++ b/hud/views/index.ejs
@@ -10,13 +10,13 @@
             <div class="hud__content">
                 <div class="hud__hearts">
                     <div class="hud__hearts__bar js-hud-hearts"></div>
-                    <div class="hud__heart__counter js-hud-heart-counter">00:00</div>
+                    <div class="hud__heart__counter js-hud-heart-counter">0:00</div>
                 </div>
                 <div class="hud__rupees">
                     <div class="hud__rupees__cheer js-hud-cheer"></div>
                 </div>
                 <div class="hud__fairies">
-                    <div class="hud__fairy__counter js-hud-fairy-counter">00:00</div>
+                    <div class="hud__fairy__counter js-hud-fairy-counter">0:00</div>
                     <div class="hud__fairies__bar js-hud-fairies"></div>
                 </div>
                 <div class="hud__sidebar js-hud-sidebar">
@@ -27,6 +27,10 @@
                     <div class="hud__follows">
                         <h2 class="yellow">Follows</h2>
                         <div class="js-hud-follows"></div>
+                    </div>
+                    <div class="hud__leaders">
+                        <h2 class="yellow">Leaders</h2>
+                        <div class="js-hud-leaders"></div>
                     </div>
                 </div>
                 <div class="hud__alert js-hud-alert">
