--- a/hud/views/index.ejs
+++ b/hud/views/index.ejs
@@ -40,8 +40,10 @@
             </div>
             <audio class="hud__audio js-hud-audio-fx" src="" controls></audio>
             <audio class="hud__audio js-hud-audio-bgm" src="" controls></audio>
-            <canvas class="hud__canvas js-hud-canvas" id="canvas"></canvas>
+            <!-- <canvas class="hud__canvas js-hud-canvas" id="canvas"></canvas> -->
+            <canvas class="hud__maze js-hud-maze" id="maze" width="200" height="1000"></canvas>
         </div>
+        <script src="/js/cellauto.js"></script>
         <script src="/js/app.js"></script>
     </body>
 </html>
