--- a/hud/source/sass/app.scss
+++ b/hud/source/sass/app.scss
@@ -316,6 +316,7 @@ body.dev {
 }
 .hud__maze {
     background-color: $black02;
+    box-shadow: 0 0 10px 5px rgba( 0, 0, 0, 0.25 );
     height: 1000px;
     // left: 50%;
     position: fixed;
