--- a/hud/views/index.ejs
+++ b/hud/views/index.ejs
@@ -35,12 +35,12 @@
                 </div>
                 <div class="hud__alert js-hud-alert">
                     <div class="hud__alert__bot">Kitajchukbot</div>
+                    <img src="" class="hud__alert__icon" width="128" height="128" />
                     <div class="hud__alert__msg js-hud-alert-msg"></div>
                 </div>
             </div>
             <audio class="hud__audio js-hud-audio-fx" src="" controls></audio>
             <audio class="hud__audio js-hud-audio-bgm" src="" controls></audio>
-            <!-- <canvas class="hud__canvas js-hud-canvas" id="canvas"></canvas> -->
             <canvas class="hud__maze js-hud-maze" id="maze" width="200" height="1000"></canvas>
         </div>
         <script src="/js/cellauto.js"></script>
