--- a/hud/views/index.ejs
+++ b/hud/views/index.ejs
@@ -21,15 +21,25 @@
                 </div>
                 <div class="hud__sidebar js-hud-sidebar">
                     <div class="hud__subs">
-                        <h2 class="yellow">Subs</h2>
+                        <h2 class="yellow">Latest Sub</h2>
                         <div class="js-hud-subs"></div>
                     </div>
                     <div class="hud__follows">
-                        <h2 class="yellow">Follows</h2>
+                        <h2 class="yellow">Recent Follow</h2>
                         <div class="js-hud-follows"></div>
                     </div>
+                    <div class="hud__commands">
+                        <h2 class="yellow">Commands</h2>
+                        <div><span class="mono pink">!ff:</span>&nbsp;<span>Catch Fairy</span></div>
+                        <div><span class="mono blue">!fb:</span>&nbsp;<span>Spend Fairy</span></div>
+                        <div><span class="mono red">!ht:</span>&nbsp;<span>Slash Heart</span></div>
+                        <div><span class="mono teal">!up <span class="purple">{n}</span></span></div>
+                        <div><span class="mono teal">!right <span class="purple">{n}</span></span></div>
+                        <div><span class="mono teal">!down <span class="purple">{n}</span></span></div>
+                        <div><span class="mono teal">!left <span class="purple">{n}</span></span></div>
+                    </div>
                     <div class="hud__leaders">
-                        <h2 class="yellow">Leaders</h2>
+                        <h2 class="yellow">Leaderboards</h2>
                         <div class="js-hud-leaders"></div>
                     </div>
                 </div>
